# crx

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  release.yaml
example/: manifest.json
proto/: crx3.proto
src/: error.rs  lib.rs  main.rs
test/: README.md  ec256-pub.pem  ecdsa.pem  extension.crx
