[package]
name = "crx"
version = "0.1.0"
edition = "2021"
authors = ["realtimetodie"]
repository = "https://github.com/realtimetodie/crx"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "crx"
path = "src/main.rs"
required-features = ["clap", "pkcs8/encryption"]

[features]
default = []
wasm = ["getrandom/js", "wasm-bindgen"]

[dependencies]
clap = "4.1.4"
const-oid = { version = "0.9.1", features = ["db"] }
ecdsa = { version = "0.15.1", default-features = false, features = ["pem", "pkcs8", "verifying"] }
getrandom = "0.2.8"
p256 = "0.12.0"
pkcs8 = { version = "0.9.0", features = ["std"] }
prost = "0.11"
rand = "0.8.5"
rsa = { version = "0.8.1", default-features = false, features = ["sha2"] }
sha2 = "0.10.6"
signature = "2.0.0"
zip = { version = "0.6.4", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }

[build-dependencies]
prost-build = "0.11"
