[package]
name = "crx"
version = "0.1.0"
edition = "2021"
authors = ["realtimetodie"]
description = "A library to read and write as CRX packages"
keywords = [
    "browser",
    "browser extension",
    "crx",
    "chrome",
    "chrome extension",
    "extension",
    "web",
    "web extension",
]
categories = [
    "command-line-utilities",
    "cryptography",
    "decoding",
    "encoding",
    "web-programming",
    "no-std",
]
license = "GPL-3.0"
documentation = "https://docs.rs/crx/"
repository = "https://github.com/realtimetodie/crx"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "crx"
path = "src/main.rs"

[features] 
default = ["ecdsa", "rsa", "std"]
ecdsa = ["dep:ecdsa", "dep:p256"]
rsa = ["dep:rsa", "dep:sha2"]
std = []
wasm = ["getrandom/js", "dep:wasm-bindgen"]

[dependencies]
clap = "4.4.12"
const-oid = { version = "0.9.6", features = ["db"] }
ecdsa = { version = "0.16.9", default-features = false, features = ["pem", "pkcs8", "verifying"], optional = true }
getrandom = { version = "0.2.11", optional = true }
p256 = { version = "0.13.2", optional = true }
pkcs8 = { version = "0.10.2", features = ["encryption", "std", "pkcs5"] }
prost = "0.12.3"
rand = "0.8.5"
rsa = { version = "0.9.6", default-features = false, features = ["sha2"], optional = true }
sha2 = { version = "0.10.8", optional = true }
signature = "2.2.0"
wasm-bindgen = { version = "0.2.89", optional = true }

[build-dependencies]
prost-build = "0.12.3"

[profile.release-bin]
inherits = "release"
strip = "debuginfo"
